-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.2.2
-
45de9ee23ff00d56784b305416242817363162ea
OpenSSH 6.7 disabled by default insecure ciphers. Unfortunately, the ssh client in QtCreator only supports 3des-cbc and aes128-cbc. These ciphers are no longer enabled by default, and thus QtCreator cannot connect to newer SSH servers.
See these release notes for more information:
http://www.openssh.com/txt/release-6.7
You either need to implement a CTR-mode cipher, or ChaCha. It looks like recent Botan versions support both, though I'm not sure about Poly1305:
http://botan.randombit.net/doxygen/classBotan_1_1ChaCha.html
http://botan.randombit.net/doxygen/classBotan_1_1CTR__BE.html
This affects all versions.
| For Gerrit Dashboard: QTCREATORBUG-13340 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 99054,4 | SSH: Add support for the recommended cipher modes from RFC 4344. | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |